--- a/kodingevents/src/main/resources/templates/events/index.html
+++ b/kodingevents/src/main/resources/templates/events/index.html
@@ -13,10 +13,14 @@
       <thead>
       <Tr>
          <th>Name</th>
+         <th>Description</th>
+         <th>Location</th>
       </Tr>
       </thead>
       <tr th:each="event : ${events}">
-         <td th:text="${event}"></td>
+         <td th:text="${event.key}"></td>
+         <td th:text="${event.value}"></td>
+         <td th:replace="fragments :: address"></td>
       </tr>
    </table>
 
