--- a/kodingevents/src/main/resources/templates/events/create.html
+++ b/kodingevents/src/main/resources/templates/events/create.html
@@ -6,7 +6,8 @@
 <h1>Create Event</h1>
 <nav th:replace="fragments :: navigation"></nav>
 
-<form method="post" action ="/events/create">
+<form method="post">
+
    <div class="form-group">
       <label>Name
       <input type="text" name="eventName" class="form-control">
@@ -16,6 +17,7 @@
          <input type="text" name="eventDescription" class="form-control">
       </label>
    </div>
+
    <div class="form=group">
       <input type="submit" value="Create Event" class="btn btn-success">
    </div>
