--- a/kodingevents/src/main/resources/templates/events/index.html
+++ b/kodingevents/src/main/resources/templates/events/index.html
@@ -14,13 +14,16 @@
       <Tr>
          <th>Name</th>
          <th>Description</th>
-         <th>Location</th>
+         <!--<th>Location</th> -->
       </Tr>
       </thead>
       <tr th:each="event : ${events}">
-         <td th:text="${event.key}"></td>
-         <td th:text="${event.value}"></td>
-         <td th:replace="fragments :: address"></td>
+         <td th:text="${event.name}"></td>
+         <td th:text="${event.description}"></td>
+
+         <!--   <td th:text="${event.key}"></td>
+          <td th:text="${event.value}"></td>
+           <td th:replace="fragments :: address"></td> -->
       </tr>
    </table>
 
