--- a/codingeventsv3/src/main/resources/templates/events/index.html
+++ b/codingeventsv3/src/main/resources/templates/events/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Title</title>
-</head>
-<body>
+<head th:replace="fragments :: head"></head>
+<body class="container">
 
     <h3>Events</h3>
+    <nav th:replace="fragments :: navigation"></nav>
 
 
-    <ul th:each="event : ${events}">
-
-
-        <li th:text="${event.name}"></li>
-
-    </ul>
+<table class="table table striped" >
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Description</th>
+    </tr>
+    </thead>
+    <tr th:each="event : ${events}">
+        <td th:text="${event.name}"></td>
+        <td th:text="${event.description}"></td>
 
     <p th:unless="${events} and ${events.size()}">No events!</p>
-
-
+</table>
 
 </body>
 </html>
