--- a/codingeventsv3/src/main/resources/templates/events/create.html
+++ b/codingeventsv3/src/main/resources/templates/events/create.html
@@ -10,7 +10,7 @@
    <div class="form-group">
       <label>Name</label>
 
-      <input type="text" name="eventName" class="form-control">
+      <input type="text" name="name" class="form-control">
 
    </div>
 
@@ -18,7 +18,7 @@
 
       <label>Description</label>
 
-      <input type="text" name="eventDescription" class="form-control">
+      <input type="text" name="description" class="form-control">
    </div>
 
    <div class="form-group">
